Asegura respuesta vacía estructurada en PFMHT010